# opensim-model-splicer-plugin

./: .gitignore  CMakeLists.txt  README.md
app/: arm-replacement-scap.cpp  arm-replacement.cpp  knee-replacement.cpp  leg-replacement-predsim.cpp
data/: Lerner_knee_left.osim  Lerner_knee_right.osim  arm-surgery.py  das3_v40600_left.osim  das3_v40600_left_mirror_rename.osim  das3_v40600_right_rename.osim  das3_v40600_right_rename_fixed.osim
data/PredSim/: Falisse_et_al_2022.osim  gait14dof22musc_pros_20180507.osim  gait14dof22musc_pros_20180507_og.xml
data/scapulothoracic/: ScapulothorachicJoint_Shoulder_v40600_l.osim  ScapulothorachicJoint_Shoulder_v40600_r.osim  ScapulothorachicJoint_Shoulder_v40600_r_mirrored.osim
lib/: Knife.cpp  Knife.h  Utils.cpp  Utils.h
output/: gait2392_thelen2003muscle_Lerner_knee.osim  gait2392_thelen2003muscle_Lerner_knee_das_arm.osim  gait2392_thelen2003muscle_Lerner_knee_left.osim  gait2392_thelen2003muscle_das_arm.osim  gait2392_thelen2003muscle_das_arm_right.osim
output/PredSim/: Falisse_et_al_2022_pros_tibia_r.osim
output/scapulothoracic/: gait2392_thelen2003muscle_Lerner_knee_scapulothoracic_arm.osim
